--- a/CollectionViewPopupTest/CollectionViewPopupTest.csproj
+++ b/CollectionViewPopupTest/CollectionViewPopupTest.csproj
@@ -110,6 +110,9 @@
 	  <MauiXaml Update="Pages\Popups\LanguageSelectPopup_CollectionView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Popups\LanguageSelectPopup_StackList.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
